Prevent confetti jumps in iOS Safari on scroll

--- a/styles/imports/confetti.css
+++ b/styles/imports/confetti.css
@@ -33,7 +33,8 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  height: 100dvh;
   display: flex;
   align-items: center;
   z-index: -1;
